--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>My First Bitstartter</title>
+		<title>My First Bitstarter</title>
 		<link type="text/css" rel="stylesheet"
 			href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
 		<style type="text/css">
@@ -16,12 +16,12 @@
 			p.lead {
 				padding-top: 15px;
 			}
-			.navigation, .pitch, .section1, .section2, .faw, .footer {
+			.navigation, .pitch, .section1, .section2, .faq, .footer {
 				padding: 10px 0px 10px 0px;
 			}
 			.video, .thermometer, .order, .social {
 				border: 1px dotted;
-				text-aligh: center;
+				text-align: center;
 			}
 			.video {
 				/* Internal borders have 1px width, thus need to add 4 x 1px to 120px. */
@@ -87,7 +87,7 @@
 					Marketing Section 2
 				</div>
 			</div>
-			<div class="row faw">
+			<div class="row faq">
 				<div class="span12">
 					FAQ
 				</div>
