--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 		<title>My First Bitstarter</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
+		<link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
+		<link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" rel="stylesheet" type="text/css">
 		<link type="text/css" rel="stylesheet"
 			href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
 		<style type="text/css">
@@ -21,6 +23,27 @@
 					border-left: 1px white solid;
 				}
 			}
+
+			/* All form factors */
+			
+			/* Main body and headings */
+			body {
+				font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+			}
+			.heading, .subheading {
+				font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
+				text-align: center;
+			}
+			p.lead {
+				padding-top: 1.5%;
+				font-size: 24px;
+				line-height: 30px;
+			}
+			p {
+				font-size: 18px;
+				line-height: 24px;
+			}
+
 			body {
 				padding-top: 20px;
 				padding-bottom: 40px;
@@ -76,6 +99,20 @@
 				</div>
 			</div>
 		</div>
+		<!-- We use row-fluid inside containers to achieve a resizable layout. -->
+		<!-- blogs.endjin.com/2013/04/tips-for-implementing-responsive-designs-using-bootstrap/ -->
+		<!-- http://stackoverflow.com/a/12270322 -->
+		<div class="container">
+			<!-- Font and paired font of .heading/.subheading and body from Google Fonts-->
+			<!-- www.google.com/fonts/specimen/Ubuntu -->
+			<!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
+			<div class="row-fluid heading">
+				<div class="span12">
+					<h1>Product</h1>
+				</div>
+			</div>
+		</div>
+
 		<div class="container">
 			<div class="row navigation">
 				<div class="span2 logo">
