--- a/index.html
+++ b/index.html
@@ -44,6 +44,24 @@
 				line-height: 24px;
 			}
 
+			/* Video pitch and Action */
+			.pitch {
+				padding: 2.5% 0%;
+			}
+			.order {
+				padding: 2% 0%;
+			}
+			.actions {
+				background-color: #343434;
+				padding: 3% 0%;
+			}
+			.video, .thermometer, .order, .social, .statistics {
+				text-align: center;
+			}
+			.statistics h3, .statistics p {
+				color: white;
+			}
+
 			body {
 				padding-top: 20px;
 				padding-bottom: 40px;
@@ -109,6 +127,18 @@
 			<div class="row-fluid heading">
 				<div class="span12">
 					<h1>Product</h1>
+				</div>
+			</div>
+			<div class="row-fluid subheading">
+				<div class="span12">
+					<!-- Special typography from Bootstrap for lead paragraph. -->
+					<!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
+					<p class="lead">One sentence description.</p>
+				</div>
+			</div>
+			<div class="row-fluid pitch">
+				<div class="span5 offset1 video">
+					<img class="img-polaroid" src="http://placehold.it/480x300">
 				</div>
 			</div>
 		</div>
