--- a/index.html
+++ b/index.html
@@ -178,6 +178,15 @@
 							</div>
 						</div>
 					</div>
+					<div class="span10 offset1">
+						<!-- Bootstrap progress bar -->
+						<!-- htto://twitter.github.io/bootstrap/components.html#progress -->
+						<div class="thermometer progress active">
+							<div class="bar bar-success" style="width: 60%;"></div>
+							<div class="bar bar-warning" style="width: 40%;"></div>
+						</div>
+					</div>
+
 				</div>
 			</div>
 		</div>
