--- a/index.html
+++ b/index.html
@@ -77,35 +77,27 @@
 				color: white;
 			}
 
-			body {
-				padding-top: 20px;
-				padding-bottom: 40px;
+			/* Marketing Copy and Footer */
+			.copy {
+				.padding-top: 2.5%;
+				.padding-bottom: 2.5%;
+				text-aligh: justify;
 			}
-			.container {
-				width: 960px;
+			.asset {
+				.padding: 2.5% 0%;
 			}
-			p.lead {
-				padding-top: 15px;
-			}
-			.navigation, .pitch, .section1, .section2, .faq, .footer {
-				padding: 10px 0px 10px 0px;
-			}
-			.video, .thermometer, .order, .social {
-				border: 1px dotted;
+			.footer {
+				color: #cccccc;
 				text-align: center;
 			}
-			.video {
-				/* Internal borders have 1px width, thus need to add 4 x 1px to 120px. */
-				height: 124px;
-				line-height: 124px;
+			.footer p {
+				font-size: 11px;
 			}
-			.thermometer, .order, .social {
-				/* line-height to vertically center: http://phrogz.net/css/vertical-align/index.html */
-				height: 40px;
-				line-height: 40px;
+			.footer a {
+				font-size: 11px;
 			}
-			div.row {
-				border: 1px solid;
+			.footer a {
+				color: #ccccff;
 			}
 		</style>
 	</head>
@@ -201,6 +193,54 @@
 					</div>
 				</div>
 			</div>
+			<!-- Beyond this part the marketing copy begins. -->
+			<!-- https://developer.mozilla.org/en-US/docs/Web/CSS/text-align -->
+			<!-- http://twitter.github.io/bootstrap/base-css.html#images -->
+			<!-- http://placehold.it -->
+			<div class="row-fluid section1">
+				<div class="span5 offset1 asset">
+					<img class="img-polaroid" src="http://placehold.it/480x300">
+				</div>
+				<div class="span5 copy">
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+						parta, dui sagittis henderit rutum, nunc leo tempus nisl, eu
+						mollis justo velit at nunc. Fusce nec egestas sem. Donec
+						fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
+						volutpat lorem ut congue malesuada. In facilisis scelerisque
+						turpis sed lacinia. Donec in orci lectus. Donec auctor semper
+						quam, eget rhancus purus fringilla id. Phasellus id nihn eu
+						risus ultrices adipiscing. Lorem ipsum dolor sit amet,
+						consectetur adipiscing elit. Donec parta, dui sagittis henderit
+						rutrum, nunc leo tempus nisl, eu mollis justo velit at
+						nunc. Fusce nec egestas sem. Donec fringilla.
+					</p>
+				</div>
+			</div>
+			<div class="row-fluid section2">
+				<div class="span5 offset1 copy copy-right">
+                                       <p>
+                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+                                                parta, dui sagittis henderit rutum, nunc leo tempus nisl, eu
+                                                mollis justo velit at nunc. Fusce nec egestas sem. Donec
+                                                fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
+                                                volutpat lorem ut congue malesuada. In facilisis scelerisque
+                                                turpis sed lacinia. Donec in orci lectus. Donec auctor semper
+                                                quam, eget rhancus purus fringilla id. Phasellus id nihn eu
+                                                risus ultrices adipiscing. Lorem ipsum dolor sit amet,
+                                                consectetur adipiscing elit. Donec parta, dui sagittis henderit
+                                                rutrum, nunc leo tempus nisl, eu mollis justo velit at
+                                                nunc. Fusce nec egestas sem. Donec fringilla.
+                                        </p>
+				</div>
+				<div class="span5 asset">
+					<img class="img-polariod" src="http://placehold.it/480x300">
+				</div>
+			</div>
+
+			<!-- For the FAQ, we introduct a little bit of JS, using the accordion. -->
+
+
 		</div>
 
 		<div class="container">
